test/classes/hilde/recordInheritance.good
recordInheritance.chpl:6: error: inheritance is not currently supported for records
